add new components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,65 @@
 @tailwind base;
+h1 {
+  @apply text-2xl text-white font-mono font-bold leading-tight;
+}
+h2 {
+  @apply text-xl font-mono font-bold leading-tight ;
+}
+h3 {
+  @apply text-base font-mono font-semibold leading-tight ;
+}
+h4 {
+  /* Link */
+  @apply text-lg font-mono font-normal leading-tight ;
+}
+h5 {
+  /* Notif */
+  @apply text-xs font-mono leading-tight ;
+}
+
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Video';
+    src: url(./fonts/Video-Regular.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+    }
+
+    @font-face {
+      font-family: 'Video';
+      src: url(./fonts/Video-Bold.ttf) format('truetype');
+      font-weight: bold;
+      font-style: normal;
+      font-display: swap;
+  }
+  @font-face {
+    font-family: 'Video';
+    src: url(./fonts/Video-SemiBold.ttf) format('truetype');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+  }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Video';
+  font-size: 16px;
+  line-height: 24px;
+}
+
+button {
+  padding: 0;
+  margin: 0;
+  font-family: 'Press Start 2P';
+  font-size: 8px;
+  line-height: 8px;
 }
 
 a {
