--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,18 +3,18 @@ h1 {
   @apply text-2xl text-white font-mono font-bold leading-tight;
 }
 h2 {
-  @apply text-xl font-mono font-bold leading-tight ;
+  @apply text-xl font-mono font-bold leading-tight;
 }
 h3 {
-  @apply text-base font-mono font-semibold leading-tight ;
+  @apply text-base font-mono font-semibold leading-tight;
 }
 h4 {
   /* Link */
-  @apply text-lg font-mono font-normal leading-tight ;
+  @apply text-lg font-mono font-normal leading-tight;
 }
 h5 {
   /* Notif */
-  @apply text-xs font-mono leading-tight ;
+  @apply text-xs font-mono leading-tight;
 }
 
 @tailwind components;
@@ -22,34 +22,40 @@ h5 {
 
 @layer base {
   @font-face {
-    font-family: 'Video';
-    src: url(./fonts/Video-Regular.ttf) format('truetype');
+    font-family: "Video";
+    src: url(./fonts/Video-Regular.ttf) format("truetype");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-    }
+  }
 
-    @font-face {
-      font-family: 'Video';
-      src: url(./fonts/Video-Bold.ttf) format('truetype');
-      font-weight: bold;
-      font-style: normal;
-      font-display: swap;
+  @font-face {
+    font-family: "Video";
+    src: url(./fonts/Video-Bold.ttf) format("truetype");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
   }
   @font-face {
-    font-family: 'Video';
-    src: url(./fonts/Video-SemiBold.ttf) format('truetype');
+    font-family: "Video";
+    src: url(./fonts/Video-SemiBold.ttf) format("truetype");
     font-weight: 600;
     font-style: normal;
     font-display: swap;
-}
   }
+}
+
+@layer utilities {
+  .text-stroke {
+    -webkit-text-stroke: 1px black;
+  }
+}
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Video';
+  font-family: "Video";
   font-size: 16px;
   line-height: 24px;
 }
@@ -57,7 +63,7 @@ body {
 button {
   padding: 0;
   margin: 0;
-  font-family: 'Press Start 2P';
+  font-family: "Press Start 2P";
   font-size: 8px;
   line-height: 8px;
 }
